improve template validation and NuSMV generation robustness; fix null-safety warnings in service tests